# libsndifsdl2

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  Makefile  Makefile.am  Makefile.in  config-conds.m4  config-flags.m4  config-libs.m4  config-subst.m4  config.default.mk  config.macports.mk  configure  configure.ac
debian/: changelog  control  copyright  rules  watch
doc/: changelog.xml
src/sound_sdl/: Makefile  Makefile.am  sound_sdl.c  sound_sdl.h
src/sound_sdl2/: Makefile.am  Makefile.in  sound_sdl2.c  sound_sdl2.h
